fix style on safari

--- a/src/styles/virtualCardDetails.scss
+++ b/src/styles/virtualCardDetails.scss
@@ -29,7 +29,7 @@
 
 .bank-card {
   position: relative;
-  top: -199px;
+  top: -200px;
   margin: 0 auto;
   width: 320px;
   height: 200px;
